# sama-gryd-landing

./: gryd-landing-v1.html  gryd-landing-v2.html  package-lock.json  package.json  sama-foundation.html  sama-landing-v2.html  sama-landing.html  serve.json  wireframe-landing-v1.html
DEG-main/: .gitignore  README.md
DEG-main/architecture/: Energy Registries.md  Energy catalogue.md  Energy contract.md  Energy credentials.md  Energy intent.md  Energy resource address.md  Energy resource.md  Energy_policy_as_code.md  README.md
DEG-main/devkits/: README.md
DEG-main/devkits/data-exchange/: README.md
DEG-main/devkits/demand-flex/: README.md
DEG-main/devkits/ev-charging/: README.md
DEG-main/devkits/ev-charging-migration-kit/: README.md
DEG-main/devkits/p2p-enrollment/: README.md
DEG-main/devkits/p2p-trading-ies-wave1/: README.md
DEG-main/devkits/p2p-trading-ies-wave1/beckn-signing-kit/python/: __init__.py  pyproject.toml  signer.py  test_example.py  test_signer.py  verifier.py
DEG-main/devkits/p2p-trading-ies-wave2/: README.md
DEG-main/devkits/scripts/: run-arazzo-lib.sh
DEG-main/docs/: Onboarding_Users_in_Digital_Energy_Programs.md  The_Vision.md
DEG-main/docs/implementation-guides/: README.md
DEG-main/governance/: README.md
DEG-main/plugins/: go.mod  go.sum
DEG-main/plugins/degledgerrecorder/: README.md  beckn_rewrite_test.go  client.go  (+10 more)
DEG-main/scripts/: check_all_links.sh  check_links.py  embed_example_json.py  evaluate_demand_flex_settlement.py  generate_postman_collection.py  requirements.txt  validate_schema.py  validate_vc_examples.py
(+883 files in other folders)
